--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Absensi">
         <activity
+            android:name=".ui.PulangActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.HomeMuridActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.HomeGuruActivity"
             android:exported="true" />
         <activity
             android:name=".ui.LoginGuruActivity"
@@ -23,6 +29,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,8 +37,8 @@
             android:name=".MainActivity"
             android:exported="true" />
     </application>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
