--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -26,6 +29,7 @@ android {
     }
     buildFeatures{
         viewBinding true
+        compose true
     }
 
     compileOptions {
@@ -34,6 +38,15 @@ android {
     }
     kotlinOptions {
         jvmTarget = '11'
+        useIR = true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
@@ -44,6 +57,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.activity:activity-compose:1.3.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -66,6 +84,13 @@ dependencies {
     implementation "org.koin:koin-android:2.1.6"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "com.google.accompanist:accompanist-pager:0.17.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.17.0"
 
 }
